<!--
  Quasseldroid - Quassel client for Android

  Copyright (c) 2020 Janne Mareike Koschinski
  Copyright (c) 2020 The Quassel Project

  This program is free software: you can redistribute it and/or modify it
  under the terms of the GNU General Public License version 3 as published
  by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License along
  with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Space
      android:layout_width="match_parent"
      android:layout_height="16dp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="16dp"
      android:paddingRight="16dp">

      <FrameLayout
        android:layout_width="56dp"
        android:layout_height="68dp">

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_gravity="center_vertical"
          app:srcCompat="@drawable/ic_pencil"
          app:tint="?android:textColorSecondary"
          tools:ignore="ContentDescription" />
      </FrameLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameWrapper"
        style="@style/Widget.CustomTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_account_name"
        tools:ignore="LabelFor">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          app:errorEnabled="true" />
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Space
      android:layout_width="match_parent"
      android:layout_height="16dp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="16dp"
      android:paddingRight="16dp">

      <FrameLayout
        android:layout_width="56dp"
        android:layout_height="68dp">

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_gravity="center_vertical"
          app:srcCompat="@drawable/ic_server_network"
          app:tint="?android:textColorSecondary"
          tools:ignore="ContentDescription" />
      </FrameLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/hostWrapper"
          style="@style/Widget.CustomTextInput"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/label_connection_host"
          tools:ignore="LabelFor">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/portWrapper"
          style="@style/Widget.CustomTextInput"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/label_connection_port"
          tools:ignore="LabelFor">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/defaultConnectionPort"
            app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
          android:id="@+id/require_ssl"
          style="@style/Widget.CoreSettings.PrimaryItemSwitch"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/label_connection_ssl" />
      </LinearLayout>
    </LinearLayout>

    <Space
      android:layout_width="match_parent"
      android:layout_height="16dp" />


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="16dp"
      android:paddingRight="16dp">

      <FrameLayout
        android:layout_width="56dp"
        android:layout_height="68dp">

        <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="24dp"
          android:layout_height="24dp"
          android:layout_gravity="center_vertical"
          app:srcCompat="@drawable/ic_account"
          app:tint="?android:textColorSecondary"
          tools:ignore="ContentDescription" />
      </FrameLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/userWrapper"
          style="@style/Widget.CustomTextInput"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/label_account_user"
          tools:ignore="LabelFor">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword|textNoSuggestions"
            app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/passWrapper"
          style="@style/Widget.CustomTextInput"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/label_account_pass"
          app:passwordToggleEnabled="true"
          tools:ignore="LabelFor">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:errorEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

      </LinearLayout>
    </LinearLayout>

    <Space
      android:layout_width="match_parent"
      android:layout_height="16dp" />
  </LinearLayout>
</androidx.core.widget.NestedScrollView>
