<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/connection_status"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="?colorBackgroundSnackbar"
  android:minHeight="32dp"
  android:paddingLeft="16dp"
  android:paddingTop="6dp"
  android:paddingRight="16dp"
  android:paddingBottom="6dp"
  android:visibility="gone"
  android:theme="?attr/actionBarTheme"
  tools:visibility="visible">

  <androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/connection_status_icon"
    android:layout_width="20dp"
    android:layout_height="20dp"
    app:srcCompat="@drawable/ic_disconnected"
    android:visibility="gone"
    app:tint="?android:textColorPrimary"
    tools:visibility="visible" />

  <me.zhanghai.android.materialprogressbar.MaterialProgressBar
    android:id="@+id/connection_status_progress"
    style="@style/Widget.MaterialProgressBar.ProgressBar"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:indeterminate="true"
    android:visibility="gone"
    app:mpb_indeterminateTint="?android:textColorPrimary" />

  <TextView
    android:id="@+id/connection_status_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:textColor="?android:textColorPrimary"
    tools:text="@string/label_status_connecting" />

</LinearLayout>
