<!--
  Quasseldroid - Quassel client for Android

  Copyright (c) 2020 Janne Mareike Koschinski
  Copyright (c) 2020 The Quassel Project

  This program is free software: you can redistribute it and/or modify it
  under the terms of the GNU General Public License version 3 as published
  by the Free Software Foundation.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License along
  with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <androidx.viewpager.widget.ViewPager
    android:id="@+id/view_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

  <androidx.appcompat.widget.ActionMenuView
    android:id="@+id/menu_view"
    android:layout_width="56dp"
    android:layout_height="?actionBarSize"
    android:layout_gravity="end|top"
    android:theme="?attr/actionBarPopupTheme" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/next_button"
    style="@style/Widget.MaterialComponents.FloatingActionButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right|bottom"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    app:backgroundTint="?colorAccent"
    app:fabSize="normal"
    app:srcCompat="@drawable/ic_forward"
    app:tint="#ffffffff"
    android:contentDescription="@string/label_next"
    tools:ignore="RtlHardcoded"
    tools:src="@drawable/ic_arrow_right" />

</merge>
